data/derived/sp14/progs/unify/prog0182.ml.out
Characters 11-36:
  List.split (padZero [9;9] [1;0;0;2]);;
             ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type ('a * 'b) list
